# slack-calendar-status

./: .env.dist  Cargo.toml  README.md
src/: ical.rs  main.rs  slack.rs
