[package]
name = "slack-calendar-status"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["multipart"] }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"